# graphrag_mcp

./: .env.example  .gitignore  LICENSE  README.md  go.sh  main.py  pyproject.toml  run_server.sh  server.py
graphrag_mcp/: __init__.py  documentation_tool.py
