[project]
name = "graphrag-mcp"
version = "0.1.0"
description = "GraphRAG Model Context Protocol integration for hybrid graph and vector databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "neo4j>=5.14.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
